# GitVizz

./: .cursorrules  .gitignore  Creating a New GitHub App.md  README.md  TODO.md  custom_ast_parser.py  docker-compose.backend-no-mongo.yaml  docker-compose.full-stack-no-mongo.yaml  docker-compose.full-stack.yaml  docker-compose.prod.yaml  docker-compose.yaml  graph_generator.py  modal_server.py  requirements.txt  server.py
.github/workflows/: modal_backend_deploy.yaml
archives/: server.py
archives/parsers/: __init__.py  ast_parser.py  base_parser.py  codetext_parser.py  graph_builder.py  llm_parser.py  (+1 more)
backend/: .env.example  DOCUMENTATION_PATH_INTEGRATION.md  Dockerfile  LICENSE  MIDDLEWARE_SUMMARY.md  config.py  graph_generator.py  modal_server.py  pyproject.toml  requirements.txt  server.py  test_auth_middleware.py  test_documentation_path.py  test_github_app_auth.py
backend/controllers/: api_key_controller.py  auth_controller.py  chat_controller.py  github_controller.py  indexed_repos_controller.py  repo_controller.py
backend/docs/: AUTH_MIDDLEWARE.md
backend/documentation_generator/: ai_client.py  analyzers.py  api.py  core.py  embedders.py  parsers.py
backend/documentationo_generator/: __init__.py  ai_client.py  analyzers.py  api.py  core.py  embedders.py  multi_provider_client.py  parsers.py  structures.py  universal_ai_client.py  utils.py
backend/graphing/: graph_generator.py
backend/middleware/: auth_middleware.py
backend/models/: chat.py  repository.py  task.py  user.py
backend/routes/: auth_routes.py  chat_routes.py  documentation_routes.py  example_auth_routes.py  github_routes.py  indexed_repos_routes.py  repo_routes.py  simple_api_key_routes.py  updated_chat_routes.py
backend/schemas/: auth_schemas.py  chat_schemas.py  documentation_schemas.py  github_schemas.py  graph_schemas.py  response_schemas.py
backend/services/: graph_search_service.py
backend/tests/: context_output_download_models.md  context_output_omniparse_client.md  context_output_parse_document.md  context_output_server_main.md  test_chat_feature.py  test_chat_integration.sh  test_graph_utils.py
backend/tests/llm_utils/: llm_usage_example.py  test_advanced_llm_features.py  test_llm_providers.py  test_user_api_keys.py
backend/utils/: agentic_chat_service.py  api_key_verifier.py  auth_middleware.py  db.py  file_utils.py  gitvizz_tools.py  graph_function_tools.py  graph_utils.py  jwt_utils.py  langchain_llm_service.py  langgraph_chat_service.py  llm_utils.py  observability.py  repo_utils.py
docs/: deployment_guide.md  github_personal_token.md  management_commands.md  phoenix_observability.md  production_deployment_plan.md
frontend/: .env.example  .env.local.backup  .example.env  .gitignore  Dockerfile  LICENSE  README.md  commit-pr-message.md  eslint.config.mjs  next.config.ts  openapi-ts.config.ts  package.json  pnpm-lock.yaml
gitvizz/: LICENSE  README.md  pyproject.toml
gitvizz/docs/: TOOLS_REFERENCE.md
gitvizz/examples/: graph_search_demo.ipynb  graph_visualization_demo.ipynb
gitvizz/gitvizz/: __init__.py  graph_generator.py  graph_search_tool.py
gitvizz/test/: advanced_tools_test.py  graph_generator_test.py  graph_search_tool_test.py
nginx/: nginx.conf
scripts/: BACKEND_DEPLOYMENT.md  FULL_STACK_DEPLOYMENT.md  README.md  backend-manager.sh  backup-prod.sh  deploy-backend.sh  deploy-full-stack.sh  deploy-prod.sh  dev-env.sh  dev-menu.sh  environment-verification-report.md  full-stack-manager.sh  generate-ssl-certs.sh  health-check.sh  init-mongodb.sh  quick-start.sh  security-setup.sh  setup-env-for-compose.sh  setup-env.sh  setup-ssl.sh  test-chat-manual.md  update-prod.sh
static/: code_graph.html  dependency_graph.html  dev-mohit06_RAGBench_main_dependency_graph.html  lancedb_lancedb_main_dependency_graph.html  local_upload_dependency_graph.html  zip_omniparse-main_dependency_graph.html
templates/: index.html
(+101 files in other folders)
