[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gitvizz"
dynamic = ["version"]
description = "A Python library for generating code dependency graphs from repository files"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "GitVizz Team", email = "support@gitvizz.com" },
]
keywords = [
    "code-analysis",
    "dependency-graph", 
    "ast-parsing",
    "python",
    "javascript",
    "typescript",
    "react",
    "nextjs",
    "visualization",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9", 
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "tree-sitter>=0.20.0",
    "tree-sitter-javascript>=0.20.0", 
    "tree-sitter-typescript>=0.20.0",
    "pyvis>=0.3.2",
    "networkx>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/gitvizz/gitvizz-graphing"
Documentation = "https://gitvizz-graphing.readthedocs.io"
Repository = "https://github.com/gitvizz/gitvizz-graphing.git"
"Bug Tracker" = "https://github.com/gitvizz/gitvizz-graphing/issues"

[tool.hatch.version]
path = "gitvizz/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["gitvizz"]

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=gitvizz --cov-report=term-missing"